@@ -5,6 +5,9 @@ invalid-instantiable=Attempted to use undefined instantiable in namespace '__1__
 handler-already-defined=Attempted to register two GUI event handlers with the same name: __1__
 instance-already-defined=Attempted to define an instance that was already defined in namespace '__1__': __2__
 
+shortcut-already-registered=Attempted to register a second shortcut for the namespace '__1__': __2__
+custominput-already-registered=Attempted to register a second custominput for the namespace '__1__': __2__
+
 undefiend-namespace=Attempted to use a namespace that was not initialized
 undefined-namespace-build=Attempted to build a namespace that didn't have a window defined
 invalid-namespace=Namespace contains an invalid character [__2__]: __1__
