@@ -4,6 +4,8 @@ Date: ????
   Changes:
     - All (or at least most) of types are now scoped under `module`
     - Removed the frame action button module as it's one small function is no longer useful
+  Bugfixes:
+    - Shortcuts and custominputs defined in `gui.new` now fully overwrite any shortcut or custominput within the given definition
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.5
 Date: 2024-07-08
